Add selenium tests

--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -22,7 +22,7 @@
     <div class="row">
         <h2 class="col-lg-10">Events</h2>
         <a href="#" th:href="@{index/manager/}">
-            <button class="btn btn-success col-lg-2">Event Manager</button>
+            <button class="btn btn-success col-lg-2" id="manager">Event Manager</button>
         </a>
     </div>
     <div class="row">
